helm-chart/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.vuongdevops.io.vn
    secretName: jenkins-tls-secret
  rules:
    - host: jenkins.vuongdevops.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-release
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sonarqube.vuongdevops.io.vn
    secretName: sonarqube-tls-secret
  rules:
    - host: sonarqube.vuongdevops.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-release-sonarqube
                port:
                  number: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: tracing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jaeger.vuongdevops.io.vn
    secretName: jaeger-tls-secret
  rules:
    - host: jaeger.vuongdevops.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - app.vuongdevops.io.vn
  #   secretName: app-tls-secret
  rules:
    - host: app.vuongdevops.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
